syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesforce.apollo.cryptography.proto";
option java_outer_classname = "ApolloCryptoProto";
option objc_class_prefix = "Acr";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

package crypto;

message Biff {
  enum Type {
    invalid = 0;
    DIGEST = 1;
    INT = 2;
    LONG = 3;
    BYTES = 4;
    STRING = 5;
    ULONG = 6;
  }
  int32 m = 1;
  int32 k = 2;
  int64 seed = 3;
  Type type = 4;
  repeated uint64 bits = 5;
}

message Digeste {
  int32 type = 1;
  repeated uint64 hash = 2;
}

message Sig {
  int32 code = 1;
  uint64 sequenceNumber = 2;
  repeated bytes signatures = 3;
}

message PubKey {
  int32 code = 1;
  bytes encoded = 2;
}

message Clock {
  uint64 prefix = 1;
  bytes counts = 2;
}


message StampedClock {
  oneof stamp {
    google.protobuf.Timestamp timestamp = 1;
    uint32 int = 2;
    uint64 long = 3;
  }
  Clock clock = 5;
}

message BloomeClock {
  uint64 prefix = 1;
  int32 k = 2;
  bytes counts = 3;
}

message StampedBloomeClock {
  BloomeClock clock = 1;
  google.protobuf.Timestamp stamp = 2;
}

message IntStampedBloomeClock {
  BloomeClock clock = 1;
  int32 stamp = 2;
}

message CausalMessage {
  Digeste source = 1;
  StampedClock clock = 2;
  google.protobuf.Any content = 3;
  repeated Digeste parents = 4;
}

message HexBloome {
  int32 cardinality = 1;
  repeated Digeste crowns = 2;
  Biff membership = 3;
}
